Scrollbar Fix

--- a/src/components/tabs.css
+++ b/src/components/tabs.css
@@ -8,7 +8,7 @@
   .css-ink19s > section {
     width: 16.6666%;
   }
-  .css-1q2aisx {
+  .css-1fver6g {
     overflow: hidden !important;
   }
 }
